# LinearSystemSolver

./: CMakeLists.txt
src/: BackwardSubstitution.cpp  BackwardSubstitution.h  GaussSeidel.cpp  GaussSeidel.h  GradientConjugate.cpp  GradientConjugate.h  GradientMethod.cpp  GradientMethod.h  Jacobi.cpp  Jacobi.h  Utils.cpp  Utils.h  main.cpp
src/LinearSystemSolver/: GaussSeidel.cpp  GaussSeidel.h  GradientConjugate.cpp  GradientConjugate.h  GradientMethod.cpp  GradientMethod.h  IterativeSolver.h  Jacobi.cpp  Jacobi.h  Utils.cpp  Utils.h  types.h
src/new/: IterativeSolver.cpp  IterativeSolver.h
